NetBSD Problem Report #51448

From www@NetBSD.org  Mon Aug 29 04:12:31 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D244E7A221
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 29 Aug 2016 04:12:30 +0000 (UTC)
Message-Id: <20160829041229.E96E57A2C4@mollari.NetBSD.org>
Date: Mon, 29 Aug 2016 04:12:29 +0000 (UTC)
From: ozaki-r@netbsd.org
Reply-To: ozaki-r@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: vioif(4) initializes wrong queues
X-Send-Pr-Version: www-1.0

>Number:         51448
>Category:       kern
>Synopsis:       vioif(4) initializes wrong queues
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 29 04:15:00 +0000 2016
>Closed-Date:    Wed Sep 28 10:22:44 +0000 2016
>Last-Modified:  Wed Sep 28 10:22:44 +0000 2016
>Originator:     Ryota Ozaki
>Release:        NetBSD-current, -7, -6
>Organization:
>Environment:
NetBSD kvm 7.99.35 NetBSD 7.99.35 (KVM) #274: Mon Aug 29 12:39:21 JST 2016  ozaki-r@rangeley:(hidden) amd64
>Description:
vioif(4) wrongly initializes (bus_dmamap_create & bus_dmamap_load) tx/rx queues:

        for (i = 0; i < rxqsize; i++) {
                C_L1(rxhdr_dmamaps[i], rx_hdrs[i], ...

        ...

        for (i = 0; i < txqsize; i++) {
                C_L1(txhdr_dmamaps[i], rx_hdrs[i], ...
                                       ^^^^^^^
                                       should be tx_hdrs

It causes queue stalls on some environments, e.g., GCE.

Pointed out by Mike Larkin.

>How-To-Repeat:

>Fix:
diff --git a/sys/dev/pci/if_vioif.c b/sys/dev/pci/if_vioif.c
index 2defe41..73b83f6 100644
--- a/sys/dev/pci/if_vioif.c
+++ b/sys/dev/pci/if_vioif.c
@@ -427,7 +427,7 @@ vioif_alloc_mems(struct vioif_softc *sc)
        }

        for (i = 0; i < txqsize; i++) {
-               C_L1(txhdr_dmamaps[i], rx_hdrs[i],
+               C_L1(txhdr_dmamaps[i], tx_hdrs[i],
                    sizeof(struct virtio_net_hdr), 1,
                    WRITE, "tx header");
                C(tx_dmamaps[i], NULL, ETHER_MAX_LEN, 16 /* XXX */, 0,

>Release-Note:

>Audit-Trail:
From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51448 CVS commit: src/sys/dev/pci
Date: Mon, 29 Aug 2016 04:21:26 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Aug 29 04:21:26 UTC 2016

 Modified Files:
 	src/sys/dev/pci: if_vioif.c

 Log Message:
 Fix initializing wrong queues

 Pointed out by Mike Larkin.

 PR kern/51448


 To generate a diff of this commit:
 cvs rdiff -u -r1.24 -r1.25 src/sys/dev/pci/if_vioif.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Mon, 29 Aug 2016 04:34:27 +0000
State-Changed-Why:
pullup-7 #1244, pullup-6 #1401


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51448 CVS commit: [netbsd-7] src/sys/dev/pci
Date: Sun, 18 Sep 2016 05:57:00 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Sep 18 05:57:00 UTC 2016

 Modified Files:
 	src/sys/dev/pci [netbsd-7]: if_vioif.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1244):
 	sys/dev/pci/if_vioif.c: revision 1.25
 Fix initializing wrong queues
 Pointed out by Mike Larkin.
 PR kern/51448


 To generate a diff of this commit:
 cvs rdiff -u -r1.7.2.1 -r1.7.2.2 src/sys/dev/pci/if_vioif.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51448 CVS commit: [netbsd-7-0] src/sys/dev/pci
Date: Sun, 18 Sep 2016 05:57:17 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Sep 18 05:57:17 UTC 2016

 Modified Files:
 	src/sys/dev/pci [netbsd-7-0]: if_vioif.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1244):
 	sys/dev/pci/if_vioif.c: revision 1.25
 Fix initializing wrong queues
 Pointed out by Mike Larkin.
 PR kern/51448


 To generate a diff of this commit:
 cvs rdiff -u -r1.7.2.1 -r1.7.2.1.2.1 src/sys/dev/pci/if_vioif.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51448 CVS commit: [netbsd-6] src/sys/dev/pci
Date: Sat, 24 Sep 2016 12:56:16 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Sep 24 12:56:16 UTC 2016

 Modified Files:
 	src/sys/dev/pci [netbsd-6]: if_vioif.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1401):
 	sys/dev/pci/if_vioif.c: revision 1.25
 Fix initializing wrong queues
 Pointed out by Mike Larkin.
 PR kern/51448


 To generate a diff of this commit:
 cvs rdiff -u -r1.2.8.2 -r1.2.8.3 src/sys/dev/pci/if_vioif.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51448 CVS commit: [netbsd-6-1] src/sys/dev/pci
Date: Sat, 24 Sep 2016 13:21:06 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Sep 24 13:21:06 UTC 2016

 Modified Files:
 	src/sys/dev/pci [netbsd-6-1]: if_vioif.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1401):
 	sys/dev/pci/if_vioif.c: revision 1.25
 Fix initializing wrong queues
 Pointed out by Mike Larkin.
 PR kern/51448


 To generate a diff of this commit:
 cvs rdiff -u -r1.2.8.1.2.1 -r1.2.8.1.2.2 src/sys/dev/pci/if_vioif.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51448 CVS commit: [netbsd-6-0] src/sys/dev/pci
Date: Sat, 24 Sep 2016 13:21:10 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Sep 24 13:21:10 UTC 2016

 Modified Files:
 	src/sys/dev/pci [netbsd-6-0]: if_vioif.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1401):
 	sys/dev/pci/if_vioif.c: revision 1.25
 Fix initializing wrong queues
 Pointed out by Mike Larkin.
 PR kern/51448


 To generate a diff of this commit:
 cvs rdiff -u -r1.2.14.2 -r1.2.14.3 src/sys/dev/pci/if_vioif.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 28 Sep 2016 10:22:44 +0000
State-Changed-Why:
pulled up


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.