Fix initializing wrong queues

Pointed out by Mike Larkin.

PR kern/51448